Bug 261988 - [IFC][Ruby] Base with collapsible whitespace only should not assert
Summary: [IFC][Ruby] Base with collapsible whitespace only should not assert
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: Layout and Rendering (show other bugs)
Version: WebKit Nightly Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: zalan
URL:
Keywords: InRadar
Depends on:
Blocks:
 
Reported: 2023-09-22 19:02 PDT by zalan
Modified: 2023-09-24 09:04 PDT (History)
5 users (show)

See Also:


Attachments
[fast-cq]Patch (1.98 KB, patch)
2023-09-22 19:10 PDT, zalan
no flags Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description zalan 2023-09-22 19:02:13 PDT
ssia
Comment 1 zalan 2023-09-22 19:10:21 PDT
Created attachment 467833 [details]
[fast-cq]Patch
Comment 2 EWS 2023-09-24 09:03:16 PDT
Committed 268371@main (60ee74b71219): <https://commits.webkit.org/268371@main>

All reviewed patches have been landed. Closing bug and clearing flags on attachment 467833 [details].
Comment 3 Radar WebKit Bug Importer 2023-09-24 09:04:13 PDT
<rdar://problem/115959539>