[IFC][Ruby] Base with collapsible whitespace only should not assert https://bugs.webkit.org/show_bug.cgi?id=261988

Reviewed by Antti Koivisto.

We may get no visible runs for the base, but we have to move forward with the inline items.

* LayoutTests/fast/dynamic/display-none-iframe-async-layout.html:
* Source/WebCore/layout/formattingContexts/inline/ruby/RubyFormattingContext.cpp:
(WebCore::Layout::RubyFormattingContext::layoutRubyBaseInlineAxis):

Canonical link: https://commits.webkit.org/268371@main